[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/img/2.png" type="Texture" id=5]
[ext_resource path="res://scenes/variations/0/MainBlock.gd" type="Script" id=6]
[ext_resource path="res://assets/img/labyrinth/Rectangle 8.png" type="Texture" id=7]
[ext_resource path="res://scenes/variations/0/Katty.gd" type="Script" id=8]
[ext_resource path="res://assets/img/botones/boton_iniciar.png" type="Texture" id=9]
[ext_resource path="res://assets/img/Rectangle 1.png" type="Texture" id=10]
[ext_resource path="res://assets/img/Rectangle 2.png" type="Texture" id=11]
[ext_resource path="res://assets/img/labyrinth/Vector 1.png" type="Texture" id=12]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://assets/img/labyrinth/Katty 1.png" type="Texture" id=15]
[ext_resource path="res://assets/img/labyrinth/Vector 2.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.3586
height = 321.712

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.407843 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 13 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labyrinth" type="Node2D" parent="."]
position = Vector2( 54, 252 )
__meta__ = {
"_edit_group_": true
}

[node name="GridContainer" type="GridContainer" parent="Labyrinth"]
margin_left = 71.5
margin_top = 77.5
margin_right = 495.5
margin_bottom = 500.5
custom_constants/vseparation = 135
custom_constants/hseparation = 135
columns = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Labyrinth/GridContainer"]

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel"]
texture = ExtResource( 7 )

[node name="Panel2" type="Panel" parent="Labyrinth/GridContainer"]
margin_left = 135.0
margin_right = 135.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel2"]
texture = ExtResource( 7 )

[node name="Panel3" type="Panel" parent="Labyrinth/GridContainer"]
margin_left = 270.0
margin_right = 270.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel3"]
texture = ExtResource( 7 )

[node name="Panel4" type="Panel" parent="Labyrinth/GridContainer"]
margin_top = 135.0
margin_bottom = 135.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel4"]
texture = ExtResource( 7 )

[node name="Panel5" type="Panel" parent="Labyrinth/GridContainer"]
margin_left = 135.0
margin_top = 135.0
margin_right = 135.0
margin_bottom = 135.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel5"]
texture = ExtResource( 7 )

[node name="Panel6" type="Panel" parent="Labyrinth/GridContainer"]
margin_left = 270.0
margin_top = 135.0
margin_right = 270.0
margin_bottom = 135.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel6"]
texture = ExtResource( 7 )

[node name="Panel7" type="Panel" parent="Labyrinth/GridContainer"]
margin_top = 270.0
margin_bottom = 270.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel7"]
texture = ExtResource( 7 )

[node name="Panel8" type="Panel" parent="Labyrinth/GridContainer"]
margin_left = 135.0
margin_top = 270.0
margin_right = 135.0
margin_bottom = 270.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel8"]
texture = ExtResource( 7 )

[node name="Panel9" type="Panel" parent="Labyrinth/GridContainer"]
margin_left = 270.0
margin_top = 270.0
margin_right = 270.0
margin_bottom = 270.0

[node name="Tile1" type="Sprite" parent="Labyrinth/GridContainer/Panel9"]
texture = ExtResource( 7 )

[node name="Walls" type="Sprite" parent="Labyrinth"]
position = Vector2( 206.5, 206.5 )
texture = ExtResource( 12 )

[node name="Walls2" type="Sprite" parent="Labyrinth"]
position = Vector2( 141.5, 146.5 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Katty" type="Sprite" parent="Labyrinth"]
position = Vector2( 72, 77.5 )
texture = ExtResource( 15 )
script = ExtResource( 8 )

[node name="Rectangle 1" type="Sprite" parent="."]
position = Vector2( 972.561, 432 )
texture = ExtResource( 10 )

[node name="Rectangle 2" type="Sprite" parent="Rectangle 1"]
position = Vector2( 241.127, 0 )
texture = ExtResource( 11 )

[node name="2" type="Sprite" parent="."]
visible = false
position = Vector2( 720, 450 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="MainBlock" type="Control" parent="."]
margin_left = 558.0
margin_top = 222.0
margin_right = 914.0
margin_bottom = 288.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectArea" type="Area2D" parent="MainBlock"]
position = Vector2( -558, -232 )
z_as_relative = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShadow" type="CollisionShape2D" parent="MainBlock/ConnectArea"]
position = Vector2( 737, 306 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Shadow" type="Panel" parent="MainBlock/ConnectArea"]
margin_left = 552.0
margin_top = 278.0
margin_right = 925.0
margin_bottom = 332.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBlock" type="Sprite" parent="MainBlock"]
position = Vector2( 145, 22 )
z_index = 2
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="MainBlock/MainBlock"]
margin_left = -175.663
margin_top = -2.35692
margin_right = 175.337
margin_bottom = 20.6431
custom_fonts/font = SubResource( 4 )
text = "Presiona barra espaciadora para correr"
__meta__ = {
"_edit_use_anchors_": false
}
